spacing issue for quiz fixed

--- a/ghi/src/components/quiz.css
+++ b/ghi/src/components/quiz.css
@@ -36,7 +36,7 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   width: 450px;
-  height: 120px;
+  height: 130px;
   text-align: center;
   line-height: 60px;
 }
@@ -46,7 +46,7 @@
 
 .time-left {
   font-size: 1.5em;
-  margin-top: -595px;
+  margin-top: -635px;
   text-align: center;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@
 .score-result {
   font-size: 2.5rem;
   position: absolute;
-  bottom: 65px;
+  bottom: 60px;
   left: 0;
   right: 0;
   margin: auto;
